2002-06-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.57 is released.

2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Mark Horn.

2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Update Drew Raines.

	* CRYPTO: Update keyword address specification.

2002-05-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.56 is released.

2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Mate Wierdl.

2002-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.55 is released.

2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.54 is released.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.52 is released.

2002-04-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.51 is released.

2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.50 is released.

2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Robin S. Socha.

2002-03-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Drew Raines.

2002-03-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.49 is released.

2002-03-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Mike Meyer.

2002-03-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.48 is released.

2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Charles Cazabon.

	* COPYING: New file containing the GNU General Public License
	text.  This replaces COPYRIGHT.

2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Bill Duncan.

2002-02-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
