@@ -1,3 +1,8 @@
+2002-06-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py: Add PENDING_WHITELIST_APPEND &
+	PENDING_BLACKLIST_APPEND.
+	
 2002-06-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Cookie.py (make_keyword_cookie): Replace RECIPIENT_DELIMITER
