@@ -1,3 +1,7 @@
+2002-06-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Lloyd Zusman.
+
 2002-06-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* TMDA 0.57 is released.
